[NNO-12647] - Приведение роутингов к общепринятому виду